--- a/style.css
+++ b/style.css
@@ -219,13 +219,14 @@ font-size: 16px;
 .of{
     color: rgb(20, 202, 241);
     background-color: white;
-    border: 10px solid  rgb(20, 202, 241);
+    border: 1px solid  rgb(20, 202, 241);
     margin: 20px;
     border-radius: 5px;
     padding: 15px 28px;
     text-align: center;
     display: inline-block;
     font-size: 16px;
+
 }
 
 .fd{
@@ -240,16 +241,16 @@ font-size: 16px;
     font-size: 16px;
 }
 
-.mar{
+.mq{
     color: white;
     background-color: rgb(28, 202, 241);
     border: 1px solid;
-    margin:20px;
+    margin: 20px;
     border-radius: 50px;
-    padding: 13px 40px;
+    padding: 15px 37px;
+    text-align: center;
     display: inline-block;
     font-size: 16px;
-    text-align: end;
 }
 
 .cross{
@@ -257,8 +258,8 @@ font-size: 16px;
     background-color: white;
     border: 1px solid  rgb(20, 202, 241);
     margin: 20px;
-    border-radius: 5px;
-    padding: 15px 30px;
+    border-radius: 50px;
+    padding: 15px ;
     text-align: center;
     display: inline-block;
     font-size: 16px;
